<resources>
    <string name="app_name">秀图</string>
    <string name="city">成都</string>

    <string name="register">注册</string>
    <string name="password_forget">忘记密码</string>
    <string name="home">主页</string>
    <string name="map_location">工地位置</string>
    <string name="offer">报价</string>
    <string name="offer_personality_add">添加施工项</string>
    <string name="offer_see">查看报价</string>

    <!-- user -->
    <string name="login">登录</string>
    <string name="reset_login">重新登录</string>
    <string name="hint_login_success">登录成功</string>
    <string name="login_register">新管家注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="hint_forget_password">设置密码成功</string>
    <string name="sms">获取</string>
    <string name="sms_code">验证码</string>
    <string name="count_down_unit" formatted="false">%ss后重发</string>
    <string name="hint_agreement">完成注册即代表同意</string>
    <string name="agreement">《设计家用户协议》</string>
    <string name="register_over">注册成功！</string>
    <string name="password_over">密码已成功找回！</string>
    <string name="bind_mobile">绑定登录手机</string>
    <string name="setting_password">设置登录密码</string>
    <string name="authentication">立即认证</string>

    <string name="hint_user">手机号码</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="hint_password">输入密码</string>
    <string name="hint_again_password">再次输入</string>
    <string name="hint_sms">请输入短信验证码</string>
    <string name="hint_sms_success">短信发送成功</string>
    <string name="hint_sms_failure">短信发送失败</string>
    <string name="hint_sms_code">您输入的验证码有误,请重新输入</string>
    <string name="hint_in_conformity">您两次输入的密码不一致,请重新输入</string>
    <string name="hint_register_success">您已成功注册秀图管家</string>
    <string name="hint_register_success_2">为方便接单,请前往个人中心完善资料并实名认证</string>
    <string name="hint_password_success">您已成功注册秀图管家</string>
    <string name="hint_password_success_2">为方便接单,请前往个人中心完善资料并实名认证</string>
    <string name="hint_skip_1">3s自动进入主页</string>
    <string name="hint_skip_2">3s自动进入登录界面</string>
    <string name="hint_refuse_success">拒绝成功</string>
    <string name="hint_accept_success">接受成功</string>

    <!-- error -->
    <string name="error_user">请输入正确的手机号码</string>
    <string name="error_code">请输入正确的验证码</string>
    <string name="error_password">请输入正确的登录密码</string>

    <!-- bottom tab -->
    <string name="bottom_tab_order">预约</string>
    <string name="bottom_tab_project">工程</string>
    <string name="bottom_tab_income">收益</string>
    <string name="bottom_tab_user">我的</string>

    <!-- order -->
    <string name="order_hint">还没有预约单哦</string>
    <string name="order_refuse">拒绝</string>
    <string name="order_accept">接受</string>
    <string name="order_offer">报价</string>
    <string name="order_cancel_hint">我不能接手工程，</string>
    <string name="order_cancel">取消预约</string>
    <string name="order_offer_see">查看报价</string>
    <string name="order_offer_modify">修改报价</string>
    <string name="order_date_modify">改开工日期</string>
    <string name="order_team">组队</string>
    <string name="order_project_start">开工</string>

    <!-- dialog -->
    <string name="dialog_refuse">确认拒绝预约？</string>
    <string name="dialog_accept">确认接受预约？</string>
    <string name="dialog_quotation">确认保存报价？</string>
    <string name="dialog_term_hint">请填写施工项目方量</string>
    <string name="dialog_next_hint">请确认房间信息正确</string>
    <string name="dialog_back_hint">返回后当前报价数据会丢失</string>

    <!-- offer -->
    <string name="offer_package">房间信息</string>
    <string name="offer_personality">个性项</string>
    <string name="offer_date">工期</string>
    <string name="offer_save">保存报价</string>

    <string name="offer_total_package" formatted="false">基础总价：%s元</string>
    <string name="offer_total_personality" formatted="false">个&#160;&#160;性&#160;&#160;项：%s元</string>
    <string name="offer_total_date">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;期：60天</string>
    <string name="offer_total_count" formatted="false">总计：%s元</string>

    <string name="offer_package_area">净空面积</string>
    <string name="offer_package_perimeter">周长</string>
    <string name="offer_package_perimeter_unit">m</string>
    <string name="offer_package_area_unit">m²</string>
    <string name="offer_package_total_money">净空面积</string>
    <string name="offer_package_min_area" formatted="false">不满%sm²</string>
    <string name="offer_package_min_area_two" formatted="false">按%sm²计算</string>
    <string name="offer_package_total_area" formatted="false">总净空面积%sm²</string>

    <string name="offer_personality_total_money">个性项总价</string>
    <string name="offer_personality_add_hint">选择需要添加施工项目的空间</string>

    <string name="offer_package_hint">你还没添加房间哦</string>
    <string name="offer_add_house">添加房间</string>
    <string name="offer_personality_hint">你还没添加个性项哦</string>
    <string name="offer_add_personality">添加个性项</string>

    <string name="offer_personality_term_search_hint">输入关键字或编码搜索</string>

    <string name="offer_personality_term_space_hint_1">为</string>
    <string name="offer_personality_term_space_hint_2">添加施工项目</string>

    <string name="offer_personality_term_project">项目</string>
    <string name="offer_personality_term_number">编号</string>
    <string name="offer_personality_term_price">单价</string>
    <string name="offer_personality_term_volume" formatted="false">%s方量</string>

    <string name="offer_personality_volume_hint_1">你已为</string>
    <string name="offer_personality_volume_hint_2">选择</string>
    <string name="offer_personality_volume_hint_3">请输入方量</string>

    <string name="offer_personality_price" formatted="false">单价：%s</string>
    <string name="offer_personality_volume" formatted="false">方量：%s</string>
    <string name="offer_personality_small_total" formatted="false">小计：%s</string>
    <string name="offer_personality_count" formatted="false">个性项%s项</string>

    <string name="offer_quotation_total_hint">工程总报价</string>

    <string name="offer_quotation_house">房间</string>
    <string name="offer_quotation_area">净空面积</string>
    <string name="offer_quotation_perimeter">周长</string>
    <string name="offer_quotation_package_money">净空面积</string>
    <string name="offer_quotation_term">项目</string>
    <string name="offer_quotation_volume">方量</string>
    <string name="offer_quotation_price">价格</string>
    <string name="offer_quotation_personality_money">个性项总价</string>
    <string name="offer_quotation_date_area" formatted="false">房屋面积%sm²，标准工期60工作日</string>

    <!-- new offer -->
    <string name="offer_space_info">房屋信息：</string>
    <string name="offer_space_area">净空面积：</string>
    <string name="offer_space_default_value">暂无</string>
    <string name="offer_space_hint_1">你正在为</string>
    <string name="offer_space_hint_2">进行报价</string>
    <string name="offer_space_hint_3">请立即添加房间</string>

    <string name="offer_base_send">发送给业主</string>
    <string name="offer_base_offer">基础价：</string>
    <string name="offer_base_area">净面积：</string>
    <string name="offer_base_reward">奖励金：</string>
    <string name="offer_base_amount">总&#160;&#160;&#160;&#160;价：</string>

    <string name="offer_add_term">添加项目</string>
    <string name="offer_search">输入关键字搜索</string>

    <!-- toast -->
    <string name="toast_volume">请输入方量</string>
    <string name="toast_offer_save">请添加房间</string>
    <string name="toast_send">发送成功</string>
    <string name="toast_data_failure">获取房间信息失败</string>
    <string name="toast_base_reward">奖励金信息获取失败</string>
    <string name="toast_space_null">请添加空间</string>

</resources>
