<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_max">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:background="@drawable/edit_print_bg"
        android:paddingLeft="@dimen/padding_min"
        android:paddingRight="@dimen/padding_min">

        <ImageView
            android:id="@+id/password_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/password_look_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="btClick"
            android:src="@drawable/delete"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/password_look_iv"
            android:layout_toRightOf="@+id/password_iv"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/padding_min"
        android:background="@drawable/edit_print_bg"
        android:paddingLeft="@dimen/padding_min"
        android:paddingRight="@dimen/padding_min">

        <ImageView
            android:id="@+id/again_password_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/again_password_look_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="btClick"
            android:src="@drawable/delete"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/again_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/again_password_look_iv"
            android:layout_toRightOf="@+id/again_password_iv"
            android:background="@null"
            android:hint="@string/hint_again_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/agreement_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btClick"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_max"
        android:paddingTop="@dimen/padding_max">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_agreement"
            android:textColor="@color/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/color_primary" />

    </LinearLayout>

    <com.seven.library.view.widget.Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:onClick="btClick"
        android:text="@string/register_over"
        android:textColor="@color/white"
        app:gTouchEffect="ripple"
        android:layout_marginTop="@dimen/padding_max"/>

</LinearLayout>