<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="@dimen/padding_max"
    android:layout_marginRight="@dimen/padding_max"
    android:background="@drawable/cir_border_white"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/offer_package_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_trans_left_click"
        android:onClick="btClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/offer_package"
            android:textColor="@color/offer_tab_text"
            android:textSize="@dimen/input_back" />

    </RelativeLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/offer_personality_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_trans_click"
        android:onClick="btClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/offer_personality"
            android:textColor="@color/offer_tab_text"
            android:textSize="@dimen/input_back" />

    </RelativeLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/offer_date_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_trans_right_click"
        android:onClick="btClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/offer_date"
            android:textColor="@color/offer_tab_text"
            android:textSize="@dimen/input_back" />

    </RelativeLayout>

</LinearLayout>
